Feature: Log counter (see right of SQuirreL's status bar) did neglect several logs issued during  startup.
Bug: #1507 Look and Feel Plugin: Improved handling JGoodies' WindowsLookAndFeel Java 17 error.
       The Windows start batch squirrel-sql.bat now sets the Java VM Parameter
       "--add-exports=java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED"
       to prevent JGoodies' WindowsLookAndFeel "access check failed" error
       When JGoodies a look and feel is used on Linux an error log is written during start up
       that tab titles are not displayed by JGoodies on Linux.